--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>Login</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -17,14 +17,19 @@
 <body>
     <main class="container">
         <section class="left">
-            <h1>Minha conta</h1>
+            <h1>Nova conta</h1>
             <form>
+                <input class="input" type="text" placeholder="Digite seu nome...">
                 <input class="input" type="email" placeholder="Digite seu email...">
                 <input class="input" type="password" placeholder="Digite sua senha...">
-                <button class="button" type="submit">Acessar conta</button>
+                <div class="area">
+                    <input type="radio" name="termos" id="termos" class="termos" />
+                    <span>Concordo com os termos.</span>
+                </div>
+                <button class="button" type="submit">Nova conta</button>
             </form>
             <div class="area">
-                <span class="link">Novo por aqui? <a href="signup.html">Cadastra-se</a></span>
+                <span class="link">Já possui uma conta? <a href="index.html">Faça login</a></span>
             </div>
         </section>
         <section class="right">
